# kdh

./: .gitignore  NOTICE  README.md  pyproject.toml
examples/: dispersion.py  geometry_optimization.py  molecular_dh.py  open_shell.py  parity_check.py  periodic_energy.py
kdh/: __init__.py  diagnostics.py  dispersion.py  dispersion_d3.py  krdh.py  numderiv.py  pt2_assembly.py  rdfdh.py  scf_stabilizers.py  udfdh.py  xc.py
kdh/grad/: __init__.py  rdfdh.py
tests/: test_dh_functional_literature_coefficients.py  test_dispersion_d3_molecular.py  test_dispersion_d3_periodic.py  test_molecular_dh_gradient.py  test_molecular_dh_xc.py  test_molecular_rdfdh.py  test_molecular_udfdh.py  test_native_smoke.py  test_numerical_gradient.py  test_periodic_kdh_energy.py  test_pt2_assembly.py
